--- a/package.json
+++ b/package.json
@@ -19,8 +19,12 @@
     "@react-native-community/eslint-config": "^2.0.0",
     "babel-jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-native": "^4.0.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "0.72.3",
+    "prettier": "2.8.2",
     "react-test-renderer": "18.1.0"
   },
   "jest": {
