--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@expo/metro-config": "^0.5.2",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-svg": "^13.7.0",
