--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@expo/metro-config": "^0.5.2",
+    "axios": "^1.2.3",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-svg": "^13.7.0",
