--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@expo/metro-config": "^0.5.2",
     "axios": "^1.2.3",
+    "cors": "^2.8.5",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-svg": "^13.7.0",
